Modify time and nivel names

--- a/public/tournamenter-obr/views/rescue_scorer_2017_nacional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2017_nacional.html
@@ -292,7 +292,7 @@
         <h2>Vítmas resgatadas</h2>
 
         <!-- <h5>1ª Vítima</h5> -->
-        <h4>Nivel 2 - Baixas > Vivas</h4>
+        <h4>Nivel B - Baixas > Vivas</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_lower_live['1a']" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_lower_live['1a']" btn-radio="1">1</label>
@@ -306,7 +306,7 @@
           <span style="width: 2%" class="input-group-addon">{{scorings.victims_lower_live['1a'] || 0}} pts</span>
         </div>
 
-        <h4>Nivel 2 - Baixas > Mortas</h4>
+        <h4>Nivel B - Baixas > Mortas</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_lower_dead['1a']" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_lower_dead['1a']" btn-radio="1">1</label>
@@ -320,7 +320,7 @@
           <span style="width: 2%" class="input-group-addon">{{scorings.victims_lower_dead['1a'] || 0}} pts</span>
         </div>
 
-        <h4>Nivel 1 ou Nivel 2 Altas > Vivas</h4>
+        <h4>Nivel A ou Nivel B Altas > Vivas</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_upper_live['1a']" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_upper_live['1a']" btn-radio="1">1</label>
@@ -334,7 +334,7 @@
           <span style="width: 2%" class="input-group-addon">{{scorings.victims_upper_live['1a'] || 0}} pts</span>
         </div>
 
-        <h4>Nivel 1 ou Nivel 2 Altas > Mortas</h4>
+        <h4>Nivel A ou Nivel B Altas > Mortas</h4>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.victims_upper_dead['1a']" btn-radio="0">0</label>
           <label class="btn btn-default" ng-model="scoreData.victims_upper_dead['1a']" btn-radio="1">1</label>
