--- a/public/tournamenter-obr/views/scorer.html
+++ b/public/tournamenter-obr/views/scorer.html
@@ -31,13 +31,13 @@
 
 			<div class="btn-group pull-left" style="margin-left: 10px;">
 
-				<div class="btn navbar-btn btn-default" ng-click="timer.increment(-60)" ng-class="{disabled: timer.data.value == 0}">
+				<!-- <div class="btn navbar-btn btn-default" ng-click="timer.increment(-60)" ng-class="{disabled: timer.data.value == 0}">
 					-1 Min
 				</div>
 
 				<div class="btn navbar-btn btn-default" ng-click="timer.increment(60)" ng-class="{disabled: timer.data.value == 0}">
 					+1 Min
-				</div>
+				</div> -->
 
 			</div>
 
