fix seesaw sumSpecial function

--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -118,7 +118,7 @@
             btn-checkbox>
               {{k}}
           </label>
-          <span class="input-group-addon">{{sumSpecial(scorings.seesaw, ['A','B','C','D','E'])}} pts</span>
+          <span class="input-group-addon">{{sumSpecial(scorings.seesaw, ['A','B','C'])}} pts</span>
         </div>
 
         <h5>Gap</h5>
