--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -145,9 +145,9 @@
 
         <h5>Desafio Surpresa</h5>
         <div class="btn-group btn-group-justified">
-          <label class="btn btn-default" ng-model="scoreData.victims['desafio']" btn-radio="0">Nop</label>
-          <label class="btn btn-default" ng-model="scoreData.victims['desafio']" btn-radio="1">Fez</label>
-          <span class="input-group-addon">{{scorings.victims['desafio'] || 0}} pts</span>
+          <label class="btn btn-default" ng-model="scoreData.challenge" btn-radio="0">Nop</label>
+          <label class="btn btn-default" ng-model="scoreData.challenge" btn-radio="1">Fez</label>
+          <span class="input-group-addon">{{scorings.challenge || 0}} pts</span>
         </div>
       </div>
     </div>
