--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -14,7 +14,7 @@
   <div class="jumbotron">
       <h1>Aguardando...</h1>
       <p>Para começar a pontuar, inicie o cronômetro</p>
-      <p>Versão: 2019.1</p>
+      <p>Versão: Regional 2022.1</p>
     </div>
   </div>
 </div>
