--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -246,14 +246,14 @@
           <span class="input-group-addon">{{scorings.victims_dead['3a'] || 0}} pts</span>
         </div>
 
-        <h5 style="margin-top: 32px;">Kit de Resgate</h5>
+        <h5 style="margin-top: 32px;">Kit de Resgate de entregue</h5>
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default" ng-model="scoreData.rescueKit"
-            btn-radio="0">Nop</label>
+            btn-radio="0">Não Entregue</label>
           <label class="btn btn-default" ng-model="scoreData.rescueKit"
-            btn-radio="1">No Robô</label>
+            btn-radio="1">Entregue (No Robô)</label>
           <label class="btn btn-default" ng-model="scoreData.rescueKit"
-            btn-radio="2">No Caminho</label>
+            btn-radio="2">Entregue (No Caminho)</label>
         </div>
 
 
