fix: reduce redutores and interseccoes max options

--- a/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
+++ b/public/tournamenter-obr/views/rescue_scorer_2022_regional.html
@@ -96,7 +96,7 @@
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default"
             ng-model="scoreData.speedbump[j]"
-            ng-repeat="j in ['A','B','C','D','E','F','G','H','I','J']"
+            ng-repeat="j in ['A','B','C','D','E','F','G','H']"
             btn-checkbox>
               {{j}}
           </label>
@@ -111,7 +111,7 @@
         <div class="btn-group btn-group-justified">
           <label class="btn btn-default"
             ng-model="scoreData.intersection[k]"
-            ng-repeat="k in ['A','B','C','D','E','F','G','H','I','J','K','L']"
+            ng-repeat="k in ['A','B','C','D','E','F','G','H']"
             btn-checkbox>
               {{k}}
           </label>
